tests/valid/testcase03.c
// declaration test

void test(int, string);
int main(void);

int main(void){
    print("Hello World!\n");
}

void test(int x, string y) {

}